Fix animation flicker on nav social icons

--- a/public/less/nav.less
+++ b/public/less/nav.less
@@ -359,10 +359,10 @@ ul.social-media {
           transform: scale(1);
   -webkit-transition: all 0.3s ease-in-out;
           transition: all 0.3s ease-in-out;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
+  //-webkit-backface-visibility: hidden;
+          //backface-visibility: hidden;
+  //-webkit-transform: translateZ(0);
+          //transform: translateZ(0);
     }
 
     &.email {
